--- a/In-class_Ex/In-class_Ex06/In-class_Ex06.qmd
+++ b/In-class_Ex/In-class_Ex06/In-class_Ex06.qmd
@@ -172,7 +172,7 @@ Notice that `st_weights()` provides tree arguments, they are:
 
 -   *nb*: A neighbor list object as created by st_neighbors().
 
--   *style*: Default \"W\" for row standardized weights. This value can also be \"B\", \"C\", \"U\", \"minmax\", and \"S\". B is the basic binary coding, W is row standardised (sums over all links to n), C is globally standardised (sums over all links to n), U is equal to C divided by the number of neighbours (sums over all links to unity), while S is the variance-stabilizing coding scheme proposed by Tiefelsdorf et al. 1999, p. 167-168 (sums over all links to n).
+-   *style*: Default "W" for row standardized weights. This value can also be "B", "C", "U", "minmax", and "S". B is the basic binary coding, W is row standardised (sums over all links to n), C is globally standardised (sums over all links to n), U is equal to C divided by the number of neighbours (sums over all links to unity), while S is the variance-stabilizing coding scheme proposed by Tiefelsdorf et al. 1999, p. 167-168 (sums over all links to n).
 
 -   *allow_zero*: If TRUE, assigns zero as lagged value to zone without neighbors.
 
@@ -204,7 +204,7 @@ There are three popularly used distance-based spatial weights, they are:
 
 Before we can derive the fixed distance weights, we need to determine the upper limit for distance band by using the steps below:
 
--   [`st_nb_dists()`](https://sfdep.josiahparry.com/reference/st_nb_dists.html) of sfdep is used to calculate the nearest neighbour distance. The output is a list of distances for each observation\'s neighbors list.
+-   [`st_nb_dists()`](https://sfdep.josiahparry.com/reference/st_nb_dists.html) of sfdep is used to calculate the nearest neighbour distance. The output is a list of distances for each observation's neighbors list.
 
 -   [`unlist()`](https://www.rdocumentation.org/packages/base/versions/3.6.2/topics/unlist) of Base R is then used to return the output as a vector so that the summary statistics of the nearest neighbour distances can be derived.
 
@@ -228,7 +228,7 @@ Now we will go ahead to compute the fixed distance weights by using the code chu
 
 -   [`st_weights()`](https://sfdep.josiahparry.com/reference/st_weights.html) is then used to calculate polygon spatial weights of the nb list. Note that:
 
-    -   the default `style` argument is set to \"W\" for row standardized weights, and
+    -   the default `style` argument is set to "W" for row standardized weights, and
 
     -   the default `allow_zero` is set to TRUE, assigns zero as lagged value to zone without neighbors.
 
@@ -246,7 +246,7 @@ wm_fd <- hunan_GDPPC %>%
 
 -   [`st_weights()`](https://sfdep.josiahparry.com/reference/st_weights.html) is then used to calculate polygon spatial weights of the nb list. Note that:
 
-    -   the default `style` argument is set to \"W\" for row standardized weights, and
+    -   the default `style` argument is set to "W" for row standardized weights, and
 
     -   the default `allow_zero` is set to TRUE, assigns zero as lagged value to zone without neighbors.
 
